--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
+networks:
+  local:
+    driver: bridge
+
 services:
   redis:
     image: redis
-    container_name: hotel-redis
+    container_name: luxurious_redis
     ports:
       - "6379:6379"
     volumes:
@@ -11,7 +15,7 @@ services:
 
   redisinsight:
     image: redis/redisinsight:latest
-    container_name: hotel-redisinsight
+    container_name: luxurious_redisinsight
     ports:
       - "5540:5540"
     networks:
@@ -21,7 +25,7 @@ services:
 
   rabbitmq:
     image: rabbitmq:3-management
-    container_name: rabbitmq
+    container_name: luxurious_rabbitmq
     ports:
       - "5672:5672" # RabbitMQ server port
       - "15672:15672" # RabbitMQ management UI port
@@ -35,7 +39,7 @@ services:
 
   mysql:
     image: mysql
-    container_name: mysql
+    container_name: luxurious_mysql
     ports:
       - 3306:3306
     environment:
@@ -69,6 +73,7 @@ services:
     restart: on-failure
     depends_on:
       - rabbitmq
+      - luxurious
     networks:
       - local
 
@@ -83,14 +88,14 @@ services:
     ports:
       - 9999:9999
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://localhost:3306/luxurioushotel
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/luxurioushotel
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=875879
       - SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE=20MB
       - SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE=20MB
-      - JWT_KEY=4iE5Fek4KhIoKcenFge6lD1ZnhqdcyFC4iVr5iQCOb8=
       - SPRING_DATA_REDIS_HOST=redis
       - SPRING_DATA_REDIS_PORT=6379
+      - JWT_KEY=4iE5Fek4KhIoKcenFge6lD1ZnhqdcyFC4iVr5iQCOb8=
       - SPRING_MAIL_FROM=thamnguyen.190599@gmail.com
       - SPRING_MAIL_HOST=smtp.gmail.com
       - SPRING_MAIL_PORT=587
@@ -105,7 +110,6 @@ services:
       - rabbitmq
       - mysql
       - redis
-      - emailconsumer
     networks:
       - local
 
@@ -114,6 +118,3 @@ volumes:
   redis_data:
   rabbitmq_data:
 
-networks:
-  local:
-    driver: bridge
