--- a/luxurious-hotel-backend/src/main/resources/application.properties
+++ b/luxurious-hotel-backend/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=luxurious-hotel
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/luxurioushotel}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:875879}
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 server.port=9999
 
